# albert-akonadi

./: .gitignore  CMakeLists.txt  main.cpp  metadata.json
contacts_kde/: CMakeLists.txt
i18n/: contacts_kde.ts
src/: main.cpp  plugin.cpp
